{added code for mobile responsive}

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         </section>
 
         <!-- section-2 -->
-        <div class="sec-2 d-flex text-center justify-content-center ">
-            <div id="2" class="sec-2-txt d-flex align-items-center text-white col-md-10">
+        <div class="sec-2 d-flex text-md-center justify-content-center ">
+            <div id="2" class="sec-2-txt d-flex align-items-center text-white col-md-10 col-8">
                 <span>
                     <p>Heco is a design studio that specializes in
                         <a href="" class="snakeLine-w text-decoration-none text-white"> creating</a> brands and websites
@@ -145,7 +145,7 @@
                     alt="">
             </div>
 
-            <div class="col-lg-5 col-md-6  text-center overflow-hidden">
+            <div class="col-lg-5 col-md-6 col-9 text-center overflow-hidden">
                 <div class="d-flex bio-txt ">
                     <p class="t-1 col-12">As a Partner and designer, JT helps clients
                         develop better brand identities, web experiences and interactive product designs. He believes in
@@ -167,8 +167,8 @@
 
         <!-- section-5  studio -->
         <div class="vh-pd">
-            <div class="pl studio-txt">
-                <p class="fw-bold fs-5"><span class="fs-2 dot">.</span>OUR STUDIO</p>
+            <div class="pl studio-txt ">
+                <p class="fw-bold fs-5 fs-6"><span class="fs-2 dot">.</span>OUR STUDIO</p>
                 <p class="fs col-6 py-5">We’re a small team that makes an outsized impact on our clients’ business.
                 </p>
                 <button class=" sec-5-btn btn btn-outline-dark rounded-pill px-lg-5 py-lg-3 fs-4">Learn more about how
@@ -197,7 +197,7 @@
 
         <!-- section-6 things we do -->
         <div class="row vh-pd" style="width:100%;">
-            <p class="pl fs-5 py-5 fw-bold"><span class="fs-2 dot">.</span>THINGS WE DO WELL</p>
+            <p class="pl fs-5 fs-6 py-5 fw-bold"><span class="fs-2 dot">.</span>THINGS WE DO WELL</p>
             <div class="pl fs col-xl-6 col-md-6">
                 <p>Creative Direction & Art Direction</p>
                 <p>BranD & Product Naming</p>
@@ -206,7 +206,7 @@
                 <p>Content Strategy & Copywriting</p>
             </div>
 
-            <div class=" fs   col-xl-6 col-md-6">
+            <div class=" fs pl-r  col-xl-6 col-md-6">
                 <p>UX Design</p>
                 <p>Web Design</p>
                 <p>Interactive Prototyping</p>
@@ -221,7 +221,7 @@
 
         <!-- section-7  awards -->
         <div class="vh-pd sec-7">
-            <p class="pl fs-5 fw-bold col-lg-3  col-md-5 d-flex justify-content-center align-items-center py-5 my-4">
+            <p class="pl fs-5 fs-6 fw-bold col-lg-3 col-8 col-md-5 d-flex justify-content-center align-items-center py-md-5 my-md-4">
                 <span class="fs-2 dot">.</span>AWARDS +
                 RECOGNITION
             </p>
@@ -281,7 +281,7 @@
 
         <!-- section-8 worked with -->
         <div class="row vh-pd sec-8">
-            <p class="pl fw-bold fs-5 py-5 my-lg-2"><span class="fs-2 dot">.</span>OTHER COMPANIES WE'VE WORKED WITH</p>
+            <p class="pl fw-bold fs-5 fs-6 py-5  my-lg-2"><span class="fs-2 dot">.</span>OTHER COMPANIES WE'VE WORKED WITH</p>
             <div class="pl fs col-xl-6 col-md-6">
                 <p>Cresco Labs</p>
                 <p>GE</p>
@@ -292,7 +292,7 @@
                 <p>Lenovo</p>
             </div>
 
-            <div class=" fs   col-xl-6 col-md-6">
+            <div class=" fs pl-r  col-xl-6 col-md-6">
                 <p>Microsoft</p>
                 <p>Motorola Solution</p>
                 <p>Northern Trust</p>
@@ -313,12 +313,12 @@
                     enjoy, get in touch.</p>
             </div>
 
-            <div class="footer-links d-flex d-flex justify-content-md-around ">
+            <div class="footer-links ">
                 <div class="col-lg-4   d-flex align-items-end">
                     <p class="px-lg-5">words + images + code © heco partners</p>
                 </div>
-                <div class="col-lg-4 d-flex justify-content-center"><a href="">info@helloheco.com</a></div>
-                <div class="col-lg-4 d-flex justify-content-around  px-lg-5">
+                <div class="r col-lg-4 d-flex justify-content-md-center"><a href="">info@helloheco.com</a></div>
+                <div class="col-lg-4 d-flex justify-content-md-around  px-lg-5">
                     <a href="" class="ft-txt">twitter</a>
                     <a href="" class="ft-txt">facebook</a>
                     <a href="" class="ft-txt">instagram</a>
