{fix bootstrap conflict} fixed bootstrap and media query classes specificity set bootstrap classes correctly for different screens

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         </section>
 
         <!-- section-2 -->
-        <div class="sec-2 d-flex text-md-center justify-content-center ">
-            <div id="2" class="sec-2-txt d-flex align-items-center text-white col-md-10 col-8">
+        <div class="sec-2 d-flex text-sm-center justify-content-center ">
+            <div id="2" class="sec-2-txt d-flex align-items-center text-white col-sm-10 col-8">
                 <span>
                     <p>Heco is a design studio that specializes in
                         <a href="" class="snakeLine-w text-decoration-none text-white"> creating</a> brands and websites
@@ -68,13 +68,13 @@
         <div class="sec-3  vh-pd d-flex justify-content-center flex-column align-items-center">
             <!-- 1 -->
             <div class="sec-3-itembox row d-flex  ">
-                <div class=" w d-flex col-xl-6  col-md-6 flex-column">
+                <div class=" w d-flex col-xl-6  col-sm-6 flex-column">
                     <img src="img/work-img1.jpg" alt="img1">
                     <h5 class="sec-3-heading">ŌLIV</h5>
                     <p class="sec-3-txt">An apartment brand that inspires people to go live their best.</p>
                 </div>
 
-                <div class="d-flex col-xl-6  col-md-6 flex-column">
+                <div class="d-flex col-xl-6  col-sm-6 flex-column">
                     <img src="img/work-img2.jpg" alt="img1">
                     <h5 class="sec-3-heading">BLUECREW</h5>
                     <p class="sec-3-txt">A website for making staffing challenges a thing of the past.</p>
@@ -84,14 +84,14 @@
 
             <!-- 2 -->
             <div class="sec-3-itembox row d-flex  ">
-                <div class="d-flex col-xl-6  col-md-6 flex-column">
+                <div class="d-flex col-xl-6  col-sm-6 flex-column">
                     <img src="img/work-img3.jpeg" alt="img1">
                     <h5 class="sec-3-heading">BLUEBOARD</h5>
                     <p class="sec-3-txt">A brand and website about the raddest way to reward employees.
                     </p>
                 </div>
 
-                <div class="d-flex col-xl-6  col-md-6 flex-column">
+                <div class="d-flex col-xl-6  col-sm-6 flex-column">
                     <img src="img/work-img4.jpg" alt="img1">
                     <h5 class="sec-3-heading">HUB ON CAMPUS</h5>
                     <p class="sec-3-txt">A brand for the new icon of collage living.</p>
@@ -101,13 +101,13 @@
 
             <!-- 3 -->
             <div class="sec-3-itembox row d-flex  ">
-                <div class="d-flex col-xl-6  col-md-6 flex-column">
+                <div class="d-flex col-xl-6  col-sm-6 flex-column">
                     <img src="img/work-img5.jpeg" alt="img1">
                     <h5 class="sec-3-heading">ONCORPS</h5>
                     <p class="sec-3-txt">A website about a decidedly different approach to machine learning.</p>
                 </div>
 
-                <div class="d-flex col-xl-6  col-md-6 flex-column">
+                <div class="d-flex col-xl-6  col-sm-6 flex-column">
                     <img src="img/work-img6.jpeg" alt="img1">
                     <h5 class="sec-3-heading">CYRUS HOTEL
                     </h5>
@@ -118,14 +118,14 @@
 
             <!-- 4 -->
             <div class="sec-3-itembox row d-flex  ">
-                <div class="d-flex col-xl-6  col-md-6 flex-column">
+                <div class="d-flex col-xl-6  col-sm-6 flex-column">
                     <img src="img/work-img7.jpeg" alt="img1">
                     <h5 class="sec-3-heading">WEST ELM HOTELS</h5>
                     <p class="sec-3-txt">A site that finds the heartbeat of a new hotel brand.
                     </p>
                 </div>
 
-                <div class="d-flex col-xl-6  col-md-6 flex-column">
+                <div class="d-flex col-xl-6  col-sm-6 flex-column">
                     <img src="img/work-img8.jpeg" alt="img1">
                     <h5 class="sec-3-heading">CLYDE</h5>
                     <p class="sec-3-txt">A brand and website for insurtech’s big new name.</p>
@@ -145,7 +145,7 @@
                     alt="">
             </div>
 
-            <div class="col-lg-5 col-md-6 col-9 text-center overflow-hidden">
+            <div class="col-lg-5 col-sm-6 col-9 text-center overflow-hidden">
                 <div class="d-flex bio-txt ">
                     <p class="t-1 col-12">As a Partner and designer, JT helps clients
                         develop better brand identities, web experiences and interactive product designs. He believes in
@@ -198,7 +198,7 @@
         <!-- section-6 things we do -->
         <div class="row vh-pd" style="width:100%;">
             <p class="pl fs-5 fs-6 py-5 fw-bold"><span class="fs-2 dot">.</span>THINGS WE DO WELL</p>
-            <div class="pl fs col-xl-6 col-md-6">
+            <div class="pl fs col-xl-6 col-sm-6">
                 <p>Creative Direction & Art Direction</p>
                 <p>BranD & Product Naming</p>
                 <p>Visual Identity & Brand Voice</p>
@@ -206,7 +206,7 @@
                 <p>Content Strategy & Copywriting</p>
             </div>
 
-            <div class=" fs pl-r  col-xl-6 col-md-6">
+            <div class=" fs pl-r  col-xl-6 col-sm-6">
                 <p>UX Design</p>
                 <p>Web Design</p>
                 <p>Interactive Prototyping</p>
@@ -221,13 +221,13 @@
 
         <!-- section-7  awards -->
         <div class="vh-pd sec-7">
-            <p class="pl fs-5 fs-6 fw-bold col-lg-3 col-8 col-md-5 d-flex justify-content-center align-items-center py-md-5 my-md-4">
+            <p class="pl fs-5 fs-6 fw-bold col-lg-3 col-8 col-sm-5 d-flex justify-content-center align-items-center py-sm-5 my-sm-4">
                 <span class="fs-2 dot">.</span>AWARDS +
                 RECOGNITION
             </p>
             <div class="reward-box row pl">
 
-                <div class="col-md-3 col-6 d-flex justify-content-center position-relative">
+                <div class="col-sm-3 col-6 d-flex justify-content-center position-relative">
                     <div class="drop-d d-flex flex-column fs-5 lh-1 col-12 position-absolute  ">
                         <img src="img/zigzag line.png" alt="" style="margin-bottom: 50px; opacity: .2; width: 350px;">
                         <div style="opacity: .4;">
@@ -241,7 +241,7 @@
                     <img src="img/awords-img1.svg" alt="">
                 </div>
 
-                <div class="col-md-3 col-6 d-flex justify-content-center position-relative">
+                <div class="col-sm-3 col-6 d-flex justify-content-center position-relative">
                     <div class="drop-d d-flex flex-column col-12 fs-5 lh-1 position-absolute  ">
                         <img src="img/zigzag line.png" alt="" style="margin-bottom: 50px; opacity: .2; width: 350px;">
                         <div style="opacity: .3;">
@@ -254,9 +254,9 @@
                     <img src="img/awords-img2.svg" alt="">
                 </div>
 
-                <div class="col-md-3 col-6 d-flex justify-content-center"><img src="img/awords-img3.svg" alt=""></div>
+                <div class="col-sm-3 col-6 d-flex justify-content-center"><img src="img/awords-img3.svg" alt=""></div>
 
-                <div class="col-md-3 col-6 d-flex justify-content-center position-relative">
+                <div class="col-sm-3 col-6 d-flex justify-content-center position-relative">
                     <div class="drop-d d-flex flex-column col-12 fs-5 lh-1  position-absolute  ">
                         <img src="img/zigzag line.png" alt="" style="margin-bottom: 50px; opacity: .2; width: 350px;">
                         <div style="opacity: .3;">
@@ -271,10 +271,10 @@
                 </div>
             </div>
             <div class="reward-box row pl">
-                <div class="col-md-3 col-6 d-flex justify-content-center"><img src="img/awords-img5.svg" alt=""></div>
-                <div class="col-md-3 col-6 d-flex justify-content-center"><img src="img/awords-img6.svg" alt=""></div>
-                <div class="col-md-3 col-6 d-flex justify-content-center"><img src="img/awords-img7.svg" alt=""></div>
-                <div class="col-md-3 col-6 d-flex justify-content-center"><img src="img/awords-img8.svg" alt=""></div>
+                <div class="col-sm-3 col-6 d-flex justify-content-center"><img src="img/awords-img5.svg" alt=""></div>
+                <div class="col-sm-3 col-6 d-flex justify-content-center"><img src="img/awords-img6.svg" alt=""></div>
+                <div class="col-sm-3 col-6 d-flex justify-content-center"><img src="img/awords-img7.svg" alt=""></div>
+                <div class="col-sm-3 col-6 d-flex justify-content-center"><img src="img/awords-img8.svg" alt=""></div>
             </div>
 
         </div>
@@ -282,7 +282,7 @@
         <!-- section-8 worked with -->
         <div class="row vh-pd sec-8">
             <p class="pl fw-bold fs-5 fs-6 py-5  my-lg-2"><span class="fs-2 dot">.</span>OTHER COMPANIES WE'VE WORKED WITH</p>
-            <div class="pl fs col-xl-6 col-md-6">
+            <div class="pl fs col-xl-6 col-sm-6">
                 <p>Cresco Labs</p>
                 <p>GE</p>
                 <p>Glanbia Nutritionals</p>
@@ -292,7 +292,7 @@
                 <p>Lenovo</p>
             </div>
 
-            <div class=" fs pl-r  col-xl-6 col-md-6">
+            <div class=" fs pl-r  col-xl-6 col-sm-6">
                 <p>Microsoft</p>
                 <p>Motorola Solution</p>
                 <p>Northern Trust</p>
@@ -308,7 +308,7 @@
 
         <!-- section-9 footer -->
         <div class="footer py-5" style="z-index: 5;">
-            <div class="vh-pd footer-txt col-lg-7  col-md-8 pl d-flex flex-column justify-content-end ">
+            <div class="vh-pd footer-txt col-lg-7  col-sm-8 pl d-flex flex-column justify-content-end ">
                 <p>If you want a great-to-work-with design studio to help create brands and websites people really
                     enjoy, get in touch.</p>
             </div>
@@ -317,8 +317,8 @@
                 <div class="col-lg-4   d-flex align-items-end">
                     <p class="px-lg-5">words + images + code © heco partners</p>
                 </div>
-                <div class="r col-lg-4 d-flex justify-content-md-center"><a href="">info@helloheco.com</a></div>
-                <div class="col-lg-4 d-flex justify-content-md-around  px-lg-5">
+                <div class="r col-lg-4 d-flex justify-content-sm-center"><a href="">info@helloheco.com</a></div>
+                <div class="col-lg-4 d-flex justify-content-sm-around  px-lg-5">
                     <a href="" class="ft-txt">twitter</a>
                     <a href="" class="ft-txt">facebook</a>
                     <a href="" class="ft-txt">instagram</a>
